---
created: "2019-03-26T05:15:04.529519400Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: ppr
---

fn_ = <function>:
    f = <current function>
    f$1 :- f
    x = <argument 0>
    x$1 :- x
    <loop>:
        while_ = true
        <if> while_:
        <else>:
            <break>
    obj_ = <global y>
    prop_ = <global bar>
    val_ = obj_[prop_]
    x$1 <- val_
    <dead> = val_
    obj_$1 = <global z>
    prop_$1 = <global foo>
    test_ = x$1
    undef_ = <void>
    value_ :- undef_
    <if> test_:
        cons_ = "hi"
        value_ <- cons_
    <else>:
        alt_ = true
        value_ <- alt_
    val_$1 = value_
    obj_$1[prop_$1] <- val_$1
    <dead> = val_$1
    pred_ = 1
    logi_ :- pred_
    <if> pred_:
    <else>:
        cons_ = x$1
        logi_ <- cons_
    ele_ = logi_
    key_ = "x"
    value_$1 = x$1
    ele_$1 = { [key_]: value_$1 }
    left_ = f$1
    right_ = 1
    ele_$2 = left_ + right_
    read_ = <global g>
    one_ = 1
    write_ = read_ + one_
    <global g> <- write_
    ele_$3 = write_
    unary_ = [ele_, ele_$1, ele_$2, ele_$3]
    return_ = +unary_
    <return> return_
f :- fn_
fn_$1 = f
arg_ = 1
<dead> = fn_$1(arg_)
<dead> = true
